--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "bimmerz.app",
   "version": "1.0.0",
-  "description": "The goal of this project is to build a Raspberry Pi based headunit utilising original BMW E46 widescreen navigation monitor.",
   "directories": {
     "doc": "doc"
   },
@@ -9,8 +8,9 @@
   "author": "",
   "license": "ISC",
   "workspaces": [
-    "ibus/core", 
-    "ibus/twins",   
-    "ibus/logger"
+    "ibus",
+    "devices",    
+    "cli",
+    "controller"
   ]
 }
