--- a/cli/package.json
+++ b/cli/package.json
@@ -15,7 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@bimmerz/devices": "^1.0.0",
     "@bimmerz/ibus": "^1.0.0",
-    "@bimmerz/devices": "^1.0.0"
+    "pino-pretty": "^10.0.0"
   }
 }
