--- a/controller/package.json
+++ b/controller/package.json
@@ -17,8 +17,12 @@
   "license": "ISC",
   "dependencies": {
     "@abandonware/noble": "^1.9.2-21",
+    "@bimmerz/bus-os-serial": "^1.0.0",
+    "@bimmerz/core": "^1.0.0",
     "@bimmerz/devices": "^1.0.0",
     "@bimmerz/ibus": "^1.0.0",
-    "pino": "^8.14.1"
+    "@bimmerz/logging-pino": "^1.0.0",
+    "pino": "^8.14.1",
+    "pino-pretty": "^10.0.0"
   }
 }
