--- a/ibus/package.json
+++ b/ibus/package.json
@@ -1,23 +1,32 @@
 {
-  "name": "@bimmerz/ibus",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
-  "scripts": {
-    "build": "npx tsc",
-    "develop":"npx tsc --watch"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^20.2.5",
-    "@types/serialport": "^8.0.2",
-    "concurrently": "^8.1.0",
-    "nodemon": "^2.0.22",
-    "typescript": "^5.1.3"
-  },
-  "dependencies": {
-    "pino": "^8.14.1",
-    "serialport": "^11.0.0"
-  }
+    "name": "@bimmerz/ibus",
+    "version": "1.0.0",
+    "description": "",
+    "main": "dist/index.js",
+    "scripts": {
+        "build": "npx tsc",
+        "develop": "npx tsc --watch"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/serialport": "^8.0.2",
+        "concurrently": "^8.1.0",
+        "nodemon": "^2.0.22",
+        "typescript": "^5.1.3"
+    },
+    "dependencies": {
+        "@bimmerz/core": "^1.0.0",
+        "serialport": "^11.0.0"
+    },
+    "devicescript": {
+        "library": true
+    },
+    "files": [
+        "src/*.ts",
+        "devsconfig.json"
+    ],
+    "keywords": [
+        "devicescript"
+    ]
 }
