--- a/firmware/package.json
+++ b/firmware/package.json
@@ -3,6 +3,7 @@
     "name": "@bimmerz/firmware",
     "private": "Please use 'yarn devs add npm' to make this a publishable package",
     "dependencies": {
+        "@bimmerz/core": "^1.0.0",
         "@bimmerz/devices": "^1.0.0",
         "@bimmerz/ibus": "^1.0.0"
     },
