--- a/bus-device-serial/package.json
+++ b/bus-device-serial/package.json
@@ -2,7 +2,7 @@
     "name": "@bimmerz/bus-device-serial",
     "version": "1.0.0",
     "description": "",
-    "main": "dist/index.js",
+    "main": "src/index.ts",
     "devDependencies": {
         "@devicescript/cli": "^2.11.6"
     },
@@ -21,5 +21,9 @@
     ],
     "keywords": [
         "devicescript"
-    ]
+    ],
+    "dependencies": {
+        "@bimmerz/core": "^1.0.0",
+        "@bimmerz/ibus": "^1.0.0"
+    }
 }
