--- a/controller/package.json
+++ b/controller/package.json
@@ -6,12 +6,13 @@
   "devDependencies": {
     "@types/noble": "^0.0.41",
     "@types/node": "^20.3.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   },
   "scripts": {
     "build": "npx tsc",
-    "start": "node dist/index.js",
-    "develop": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "start": "ts-node src/main.ts",
+    "develop": "concurrently \"npx tsc --watch\" \"nodemon -q src/main.ts\""
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +22,7 @@
     "@bimmerz/core": "^1.0.0",
     "@bimmerz/devices": "^1.0.0",
     "@bimmerz/ibus": "^1.0.0",
+    "@bimmerz/ibus-protocol-node": "^1.0.0",
     "@bimmerz/logging-pino": "^1.0.0",
     "pino": "^8.14.1",
     "pino-pretty": "^10.0.0"
