--- a/core/package.json
+++ b/core/package.json
@@ -2,7 +2,7 @@
     "name": "@bimmerz/core",
     "version": "1.0.0",
     "description": "",
-    "main": "dist/index.js",
+    "main": "src/index.ts",
     "devDependencies": {
         "@types/jest": "^29.5.2",
         "jest": "^29.5.0",
