--- a/firmware/package.json
+++ b/firmware/package.json
@@ -1,7 +1,8 @@
 {
     "version": "1.0.0",
-    "name": "@bimmerz/firmware",    
+    "name": "@bimmerz/firmware",
     "dependencies": {
+        "@bimmerz/bus-device-serial": "^1.0.0",
         "@bimmerz/core": "^1.0.0",
         "@bimmerz/devices": "^1.0.0",
         "@bimmerz/ibus": "^1.0.0"
