--- a/logging-pino/package.json
+++ b/logging-pino/package.json
@@ -2,7 +2,7 @@
   "name": "@bimmerz/logging-pino",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "build": "npx tsc",
     "develop": "npx tsc --watch"
