--- a/bus-device-serial/package.json
+++ b/bus-device-serial/package.json
@@ -7,8 +7,7 @@
         "@devicescript/cli": "^2.11.6"
     },
     "scripts": {
-        "build": "npx tsc",
-        "develop": "npx tsc --watch"
+        "build": "npx tsc --noEmit"
     },
     "author": "",
     "license": "ISC",
