--- a/controller/package.json
+++ b/controller/package.json
@@ -10,7 +10,7 @@
     "typescript": "^5.1.3"
   },
   "scripts": {
-    "build": "npx tsc",
+    "build": "npx tsc --noEmit",
     "start": "ts-node src/main.ts",
     "develop": "concurrently \"npx tsc --watch\" \"nodemon -q src/main.ts\""
   },
