--- a/devices/package.json
+++ b/devices/package.json
@@ -4,8 +4,7 @@
     "description": "",
     "main": "src/index.ts",
     "scripts": {
-        "build": "npx tsc",
-        "develop": "npx tsc --watch"
+        "build": "npx tsc --noEmit"        
     },
     "author": "",
     "license": "ISC",
