--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bus-device-serial",
     "core",
     "logging-pino",
-    "ibus-protocol-node"
+    "ibus-protocol-node",
+    "commands"
   ]
 }
