--- a/devices/package.json
+++ b/devices/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "src/index.ts",
     "scripts": {
-        "build": "npx tsc --noEmit"        
+        "build": "npx tsc --noEmit"
     },
     "author": "",
     "license": "ISC",
@@ -14,6 +14,7 @@
         "typescript": "^5.1.3"
     },
     "dependencies": {
+        "@bimmerz/commands": "^1.0.0",
         "@bimmerz/core": "^1.0.0",
         "@bimmerz/ibus": "^1.0.0"
     },
