--- a/apps/mqtt-controller/package.json
+++ b/apps/mqtt-controller/package.json
@@ -3,8 +3,8 @@
   "main": "src/index.ts",  
   "scripts": {
     "build": "tsc --noEmit",
-    "start": "tsx src/index.ts -h hub.iot.solvely.pl",
-    "develop": "tsx watch src/index.ts -h hub.iot.solvely.pl"
+    "start": "tsx src/index.ts -",
+    "develop": "tsx watch src/index.ts "
   },
   "dependencies": {
     "@bimmerz/commands": "^1.0.0",
