--- a/apps/ncs-date-cli/package.json
+++ b/apps/ncs-date-cli/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "tsc --noEmit",
     "start": "tsx src/index.ts",
-    "develop": "tsx watch src/index.ts -h hub.iot.solvely.pl"
+    "develop": "tsx watch src/index.ts "
   },
   "dependencies": {    
     "@bimmerz/core": "^1.0.0",
